Knowledge card module changed to java lib instead of webservice