@@ -19,55 +19,14 @@
 		<!-- TODO put lucene to own subpackage -->
 		<lucene.version>7.5.0</lucene.version>
 	</properties>
-	
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-releases</id>
-			<url>https://repo.spring.io/libs-release</url>
-		</pluginRepository>
-	</pluginRepositories>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<jvmArguments>
-							-Xms415m -Xmx16G -XX:MaxPermSize=1G
-					</jvmArguments>
-					<mainClass>org.aksw.qa.commons.knowledgeCard.KnowledgeCardApplication</mainClass>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-						<configuration>
-							<classifier>bootable-with-spring</classifier>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	
+
 	<dependencies>
-		<dependency>
-	    	<groupId>org.springframework.boot</groupId>
-	    	<artifactId>spring-boot-starter-web</artifactId>
-	    </dependency> 
-	    <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-		</dependency>
 		<!-- QA datasets provided by github.com/aksw/qa-datasets -->
 		<dependency>
 			<groupId>org.aksw.qa</groupId>
 			<artifactId>datasets</artifactId>
 			<version>0.5.16</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.json</artifactId>
